--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -1,4 +1,10 @@
 .display{
     display: flex;
     justify-content: flex-end;
+    
+}
+@media (max-width: 700px) {
+    .media  {
+    font-size: 18px;
+    }
 }
