--- a/src/Components/Rank/Rank.css
+++ b/src/Components/Rank/Rank.css
@@ -6,6 +6,15 @@
     color: white;
  
 }
+.entries {
+    margin-top: 10px;
+}
 .ab{
     color:rgba(0, 0, 255, 1);
+}
+@media (max-width: 700px) {
+    .entries {
+    font-size: 20px;
+    margin-top: 10px;
+ }
 }
