--- a/src/Components/SearchInput/SearchInput.css
+++ b/src/Components/SearchInput/SearchInput.css
@@ -18,3 +18,20 @@ background-size: 20px 20px;
 .bb{
     margin-left: 10px;
 }
+@media (max-width: 700px) {
+    .form {
+    width: 350px;
+    height: 90px;
+    }
+    .bb{
+        font-size: 15px;
+        height: 30px;
+    }
+    .bz{
+        height: 30px;
+        margin-bottom: 0px;
+    }
+    .aa{
+        font-size: 13px;
+    }
+}
